crates/parser/tests/suite/snapshots/suite__statements__aspect_decl_measurement.snap
---
source: crates/parser/tests/suite/statements.rs
expression: "GlossqlParser ::\nparse_sql(r#\"DECLARE ASPECT min_max WITH $${\"type\": \"object\", \"properties\": {\"min\": {}, \"max\": {}}}$$ AS MEASUREMENT;\"#).expect(\"must parse\")"
---
[
    Declare(
        Aspect(
            AspectDecl {
                name: Ident {
                    value: "min_max",
                    quote_style: None,
                    span: Span(Location(1,16)..Location(1,23)),
                },
                schema: JsonBody {
                    value: Object {
                        "type": String("object"),
                        "properties": Object {
                            "min": Object {},
                            "max": Object {},
                        },
                    },
                    raw: "{\"type\": \"object\", \"properties\": {\"min\": {}, \"max\": {}}}",
                },
                kind: Measurement,
                grains: [],
                condition: None,
            },
        ),
    ),
]
