crates/parser/tests/suite/snapshots/suite__statements__extract_two_calls.snap
---
source: crates/parser/tests/suite/statements.rs
expression: "GlossqlParser ::\nparse_sql(\"SELECT outliers(), profile() FROM fin.orders;\").expect(\"must parse\")"
---
[
    Extract(
        Extract {
            calls: [
                Ident {
                    value: "outliers",
                    quote_style: None,
                    span: Span(Location(1,8)..Location(1,16)),
                },
                Ident {
                    value: "profile",
                    quote_style: None,
                    span: Span(Location(1,20)..Location(1,27)),
                },
            ],
            subject: Path(
                Path {
                    segments: [
                        Ident {
                            value: "fin",
                            quote_style: None,
                            span: Span(Location(1,35)..Location(1,38)),
                        },
                        Ident {
                            value: "orders",
                            quote_style: None,
                            span: Span(Location(1,39)..Location(1,45)),
                        },
                    ],
                },
            ),
        },
    ),
]
