crates/parser/tests/suite/snapshots/suite__statements__gloss_on_composite_pair_path.snap
---
source: crates/parser/tests/suite/statements.rs
assertion_line: 36
expression: "GlossqlParser ::\nparse_sql(r#\"GLOSS meaning ON txn.(business_id, party) -> parties.(business_id, name) AS $${\"value\": \"scoped reference\"}$$;\"#).expect(\"must parse\")"
---
[
    Gloss(
        Gloss {
            aspect: Ident {
                value: "meaning",
                quote_style: None,
                span: Span(Location(1,7)..Location(1,14)),
            },
            subject: Pair(
                PairPath {
                    left: RelSide {
                        dataset: None,
                        table: Ident {
                            value: "txn",
                            quote_style: None,
                            span: Span(Location(1,18)..Location(1,21)),
                        },
                        columns: [
                            Ident {
                                value: "business_id",
                                quote_style: None,
                                span: Span(Location(1,23)..Location(1,34)),
                            },
                            Ident {
                                value: "party",
                                quote_style: None,
                                span: Span(Location(1,36)..Location(1,41)),
                            },
                        ],
                    },
                    op: ManyToOne,
                    right: RelSide {
                        dataset: None,
                        table: Ident {
                            value: "parties",
                            quote_style: None,
                            span: Span(Location(1,46)..Location(1,53)),
                        },
                        columns: [
                            Ident {
                                value: "business_id",
                                quote_style: None,
                                span: Span(Location(1,55)..Location(1,66)),
                            },
                            Ident {
                                value: "name",
                                quote_style: None,
                                span: Span(Location(1,68)..Location(1,72)),
                            },
                        ],
                    },
                },
            ),
            body: JsonBody {
                value: Object {
                    "value": String("scoped reference"),
                },
                raw: "{\"value\": \"scoped reference\"}",
            },
        },
    ),
]
